openshift/dr/deploymentconfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: tinydemo
  labels:
    git-commit-hash: be2c2da0
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - default-container
        from:
          kind: ImageStreamTag
          namespace: demo
          name: 'tinydemo:dr-20220430151622-1-be2c2da0'
  replicas: 1
  revisionHistoryLimit: 3
  test: false
  selector:
    app: tinydemo
    deployment-config.name: tinydemo
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tinydemo
        deployment-config.name: tinydemo
    spec:
      containers:
        - name: default-container
          image: >-
            image-registry.openshift-image-registry.svc:5000/demo/tinydemo@sha256:76988e919143516b3bbbbec6dd7849c50ba3cb5152287f047a8420e47a168a31
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
